# tool-mind-gym

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README-MVP.md  README.md  WEEK1_IMPLEMENTATION_STATUS.md  bicameral-mcp-mvp-prd.md  bicameral-mind-gym-explanation.md  claude-md.md  mind-gym-context.md  mind-gym-mvp-prd.md  mind_gym_mvp.py  pyproject.toml  requirements-dev.txt  requirements-mvp.txt  requirements.txt  somatic-layer-mvp.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  cognitive_experiment.md  feature_request.md  technical_design.md
.github/workflows/: ci.yml  documentation.yml
docs/: bicameral-cognitive-stack-hypothesis.md  llm-agent-hive-system.md  pythonic-agent-system.md  sicp-aligned-agent-system.md
